# GPU-Gems-Book-Source-Code

./: README.md
GPU Gems 1 CD Content/: Index.html
GPU Gems 1 CD Content/Beyond_Triangles/Stereograms/: fonts.txt  licence.txt  pStereogram.dsw  paralelo3d.ini
GPU Gems 1 CD Content/Beyond_Triangles/Toolkit_for_GPUs/: binarysearch.cg  bitonicsort.cg  defines.h  glew32s.lib  nvtoolkit.dsw  nvtoolkit.opt  nvtoolkit.plg  nvtoolkit.vcproj  timer.h  toolkit.cpp  window.h
GPU Gems 1 CD Content/Image_Processing/High_Quality_Filtering/: gems-stripes.fxcomposer
GPU Gems 1 CD Content/Image_Processing/OpenEXR/OpenEXRGems-1.0.0/: Makefile.am  configure  configure.ac
GPU Gems 1 CD Content/Image_Processing/OpenEXR/OpenEXRGems-1.0.0/Glut/: GlutGlut.h
GPU Gems 1 CD Content/Image_Processing/OpenEXR/OpenEXRGems-1.0.0/exrcomp/: Comp.cpp  Comp.h  CompIn.cg  CompOver.cg  GlFloatPbuffer.cpp  GlFloatPbuffer.h  Makefile.am  Makefile.in
GPU Gems 1 CD Content/Image_Processing/OpenEXR/OpenEXRGems-1.0.0/exrplay/: Display.cg  Display.cpp  DisplayLut.cpp  FrameRateCounter.cpp  FrameRateCounter.h  clo.cpp  clo.h  options.xml
GPU Gems 1 CD Content/Lighting_and_Shadows/Omni_Shadow_Mapping/: OmnidirectionalShadowMapping_A8R8G8B8 (packed depth).bat  OmnidirectionalShadowMapping_R16F.bat  OmnidirectionalShadowMapping_ReadMe.txt
GPU Gems 1 CD Content/Materials/Image_Based_Lighting/: metalReflTeapot.fxcomposer
GPU Gems 1 CD Content/Natural_Effects/Water_Simulation/: WaterMesh.x  bLois.h  bLois.plg  bLois.rc  d3dapp.h  d3denumeration.cpp  d3denumeration.h  d3dfile.cpp  d3dfont.h  d3dsettings.cpp  d3dsettings.h  d3dutil.h  dxutil.h  pillars.x  resource.h
GPU Gems 1 CD Content/Performance_and_Practicalities/Integrating_HW_Shading/: CINEMA4DSDK.dsp  c4dfx.cdl  cinema4dsdk.dsw  comments for developers.txt
GPU-Gems-1-CD-Content/: Thumbs.db
GPU-Gems-1-CD-Content/Beyond_Triangles/Fluids/: readme.txt
GPU-Gems-1-CD-Content/Beyond_Triangles/Stereograms/: fonts.tga  pStereogram.opt  readme.txt
GPU-Gems-1-CD-Content/Beyond_Triangles/Toolkit_for_GPUs/: fragprog.h  nvtoolkit.dsp  nvtoolkit.ncb  nvtoolkit.sln  reduce.cg
GPU-Gems-1-CD-Content/Beyond_Triangles/Ultrasound/: Readme.txt
GPU-Gems-1-CD-Content/Image_Processing/Color_Controls/: Readme.txt
GPU-Gems-1-CD-Content/Image_Processing/OpenEXR/OpenEXRGems-1.0.0/exrplay/: Display.h  DisplayLut.cg  DisplayLut.h  Makefile.am  Makefile.in  filmlook.lut  main.cpp
GPU-Gems-1-CD-Content/Images/: Thumbs.db  style.css
GPU-Gems-1-CD-Content/Lighting_and_Shadows/Omni_Shadow_Mapping/: OmnidirectionalShadowMapping_R32F.bat
GPU-Gems-1-CD-Content/Lighting_and_Shadows/Shadow_Volumes/: readme.txt
GPU-Gems-1-CD-Content/Materials/Image_Based_Lighting/: Readme.txt
GPU-Gems-1-CD-Content/Natural_Effects/Diffraction/: diffraction.c  diffraction.dsp  diffraction.dsw  load_cubemap.c  load_cubemap.h  mouse.c  mouse.h
GPU-Gems-1-CD-Content/Natural_Effects/Water_Simulation/: CompCosines.fx  LandMesh.x  Sandy.dds  WaterRip.fx  bLois.cpp  bLois.dsp  bLois.dsw  bLois.opt  d3dapp.cpp  d3dfile.h  d3dfont.cpp  d3dutil.cpp  dxutil.cpp  nvlobby_new_cube_mipmap.dds
GPU-Gems-1-CD-Content/Performance_and_Practicalities/Integrating_HW_Shading/: manual.txt
GPU-Gems-2-CD-Content/General-Purpose_Computation_on_GPUs_A_Primer/Ch_31_Mapping_Computational_Concepts_to_GPUs/: run_gpgpu_reaction_diffusion.bat  run_gpgpu_reductions.bat
GPU-Gems-2-CD-Content/General-Purpose_Computation_on_GPUs_A_Primer/Ch_36_Stream_Reduction_Operations_for_GPGPU_Applications/: Filtering.ncb  Filtering.sln  LICENSE.txt  Makefile  NOTES  QUICK_START.txt  README  brook.ncb  brook.sln  common.mk
GPU-Gems-2-CD-Content/Geometric_Complexity/Ch_02_Terrain_Rendering_using_GPU-Based_Geometry_Clipmaps/: ComputeNormals.fx  README.txt  Render.fx  Upsample.fx
GPU-Gems-2-CD-Content/Geometric_Complexity/Ch_06_Hardware_Occlusion_Queries_Made_Useful/demo1/CHC/: CMakeLists.txt  DataTypes.cpp  DataTypes.h  FrameState.h  Geometry.cpp  Geometry.h  GeometryObjects.h  LispSM.cpp  Main.cpp  Main.h  MathStuff.cpp  MathStuff.h  Occlusion.cpp  Occlusion.h  Readme.txt  SceneData.cpp  SceneData.h
GPU-Gems-2-CD-Content/Geometric_Complexity/Ch_06_Hardware_Occlusion_Queries_Made_Useful/demo2/: CMakeLists.txt  DataTypes.c  DataTypes.h  Geometry.cpp  Geometry.h  HierarchyNode.cpp  HierarchyNode.h  MathStuff.c  MathStuff.h  Readme.txt  RenderTraverser.cpp  RenderTraverser.h  Timers.cpp  Timers.h  glInterface.h  occquery.cpp  stdafx.cpp  teapot.h
GPU-Gems-2-CD-Content/Geometric_Complexity/Ch_06_Hardware_Occlusion_Queries_Made_Useful/demo2/GL/: glew32s.lib  glut.h
GPU-Gems-3-CD-Content/: index.html
GPU-Gems-3-CD-Content/content/06/: README.txt
(+3170 files in other folders)
